Fix alignment of the layout

--- a/Frontend/src/components/modules/Modules.css
+++ b/Frontend/src/components/modules/Modules.css
@@ -64,3 +64,11 @@
       -45px 0px;
   }
 }
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE/old Edge */
+  scrollbar-width: none; /* Firefox */
+}
